2009-07-29  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.25

		* Workspace.clone() now works as well, completing support for
		corresponding nodes and workspace cloning. Yay!
		
2009-07-28  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.24
        
        * Node.update() now works.  Also, all root nodes are now also
        mix:referenceable with a known UUID. 
        
2009-07-28  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.23
        
        * FileProvider now properly stores UUIDs per workspace,
        as opposed to being global (oops - but the JCR spec *is* confusing
        in this regard; Univerally Unique IDs are not actually unique...)
        
        * Session.move() was checking for a wrong lock.
        
2009-07-27  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.22
        
        * Massively improved FileProvider save speed by implementing
        journaling for the UUID and Reference storage.

2009-07-14  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.21

        * Stored query support added.

2009-07-12  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.20
        
        * A fairly massive update on versioning; cleaned up a lots
        of strangeness relating to deletion.
        
2009-06-15  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.1.19
        
        * Implemented Version.getAllVersions().

2009-06-14  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.1.18
        
        * The basic query language is now supported mostly. ORring
        queries are not yet supported.

2009-05-16  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.1.17

        * Workspace.move() implemented. Also cleaned some TCK failures
        relating to locks.

2009-05-10  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.1.16
        
        * FileProvider was reading strings in platform encoding,
        not UTF-8.  Oops.
        
        * StringValueImpl no longer forces SCALAR interpretation