@@ -4,6 +4,10 @@
 
 		* Workspace.clone() now works as well, completing support for
 		corresponding nodes and workspace cloning. Yay!
+
+        * Implemented rudimentary access control - calling Repository.login()
+        now creates a readonly session.  Any credentials (even empty) create 
+        a read-write session.
 		
 2009-07-28  Janne Jalkanen <jalkanen@ecyrd.com>
    
